Kubernetes/Drawio/yamls/drawio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: draw.io
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8080
  selector:
    app: draw.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: draw.io
  template:
    metadata:
      labels:
        app: draw.io
    spec:
      containers:
      - image: docker.io/jgraph/drawio:latest
        imagePullPolicy: IfNotPresent
        name: drawio
        ports:
        - containerPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-drawio-https-redirect
  namespace: drawio
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-drawio-security
  namespace: drawio
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-drawio-websecure
  namespace: drawio 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`drawio.domain.com`)
      services:
        - name: drawio
          port: 3000
          serversTransport: traefik-drawio-transport
      middlewares:
        - name: traefik-drawio-security
  tls:
    secretName: drawio-urbaman
    options:
      name: traefik-drawio-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-drawio-web
  namespace: drawio
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`drawio.domain.com`)
      services:
        - name: drawio
          port: 3000 
      middlewares:
        - name: traefik-drawio-https-redirect
